# racml

./: README.md  pyproject.toml
data/feature-engineering/: UECE_test_metrics.csv  UECE_val_metrics.csv
data/processing/: IDSM_1_to_1.csv  IDSM_curated.csv  UECE_1_to_1.csv  UECE_curated.csv
data/results/: IDSM_3c_validation_results.csv  IDSM_5c_validation_results.csv  UECE_3c_validation_results.csv  UECE_5c_validation_results.csv
notebooks/IDSM/: 01_data_selection.ipynb  02_processing_extraction.ipynb  03_experiment1_drywet_5c.ipynb  03_experiment2_drywet_3c.ipynb
notebooks/UECE/: 01_data_selection.ipynb  02_metrics_extraction.ipynb  03_experiment1_drywet_5c.ipynb  03_experiment2_drywet_3c.ipynb  UECE_pipeline.py
src/: plots.py  utils.py
src/feature_engineering/: __init__.py  acoustic_metrics.py  selector.py
src/processing/: __init__.py  augmenter.py  segmenter.py
src/rainfall_classification/: __init__.py  classifiers.py  validation.py
